  https://discourse.orthanc-server.org/t/dimse-failure-using-multitenant-plugin/3665
* Housekeeper: Introduced a 'sleep' to lower CPU usage when idle.
* Support multiple values in SpecificCharacterSet in C-Find answers:
  https://discourse.orthanc-server.org/t/c-find-fails-on-unknown-specific-character-set-iso-2022-ir-6-iso-2022-ir-100/3947
  


Version 1.12.1 (2023-07-04)
===========================

General
-------

* Orthanc now anonymizes according to Basic Profile of PS 3.15-2023b Table E.1-1
* Added metrics:
  - "orthanc_storage_read_bytes" 
  - "orthanc_storage_written_bytes"
  - "orthanc_memory_trimming_duration_ms"

REST API
--------

* API version upgraded to 21
* "/tools/create-dicom" can now be used to create Encapsulated 3D
  Manufacturing Model IODs (MTL, OBJ, or STL)
* Added a route to delete the output of an asynchronous job (right now
  only for archive jobs): e.g. DELETE /jobs/../archive

Plugins
-------

* Added "OrthancPluginLoadDicomInstance()" to load DICOM instances from the database
* Added "OrthancPluginSetMetricsIntegerValue()" to track metrics with integer values

Maintenance
-----------

* Fix decoding of YBR_FULL RLE images for which the "Planar Configuration" 
  tag (0028,0006) equals 1
* Made Orthanc more resilient to common spelling errors in SpecificCharacterSet
* Modality worklists plugin: Allow searching on private tags (exact match only)
* Fix orphan files remaining in storage when working with MaximumStorageSize
  (https://discourse.orthanc-server.org/t/issue-with-deleting-incoming-dicoms-when-maximumstoragesize-is-reached/3510)
* When deleting a resource, the "LastUpdate" metadata of its parents are now updated
* Reduced the memory usage when downloading archives when "ZipLoaderThreads" > 0
* Metrics can be stored either as floating-point numbers, or as integers
* Reduce the frequency of memory trimming from 100ms to 30s to avoid high idle